{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 94,
  "lineage": "84a85544-337d-0f2e-dcde-8c5e85fc369b",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:998461587073:vpc/vpc-0828fa1e41e050958",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0604c63a29210d4cb",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0cd29bc8fc646bbe2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0828fa1e41e050958",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-099027013f2db5183",
            "owner_id": "998461587073",
            "region": "eu-central-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "compliant",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:998461587073:security-group/sg-054a5136bb5101319",
            "description": "Compliant security group for RDS module",
            "egress": [],
            "id": "sg-054a5136bb5101319",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09daf6a89be19e522"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "compliant-sg",
            "name_prefix": "",
            "owner_id": "998461587073",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ex20-rds-module-allowed-security-group"
            },
            "tags_all": {
              "Name": "ex20-rds-module-allowed-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-067e89283e91feb95"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "998461587073",
            "id": "sg-054a5136bb5101319",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "non_compliant",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:998461587073:security-group/sg-01fbb9ad37f6a5e04",
            "description": "Non-compliant security group for RDS module",
            "egress": [],
            "id": "sg-01fbb9ad37f6a5e04",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "non-compliant-sg",
            "name_prefix": "",
            "owner_id": "998461587073",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ex20-rds-module-allowed-security-group"
            },
            "tags_all": {
              "Name": "ex20-rds-module-allowed-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-067e89283e91feb95"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "998461587073",
            "id": "sg-01fbb9ad37f6a5e04",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "source",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:998461587073:security-group/sg-09daf6a89be19e522",
            "description": "Source security group for RDS module",
            "egress": [],
            "id": "sg-09daf6a89be19e522",
            "ingress": [],
            "name": "source-sg",
            "name_prefix": "",
            "owner_id": "998461587073",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ex20-rds-module-allowed-security-group"
            },
            "tags_all": {
              "Name": "ex20-rds-module-allowed-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-067e89283e91feb95"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "998461587073",
            "id": "sg-09daf6a89be19e522",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "not_allowed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:998461587073:subnet/subnet-0f2f63769fb53f475",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.31.128.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2f63769fb53f475",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "998461587073",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "ex20-rds-module-not-allowed-subnet"
            },
            "tags_all": {
              "Name": "ex20-rds-module-not-allowed-subnet"
            },
            "vpc_id": "vpc-0828fa1e41e050958"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "998461587073",
            "id": "subnet-0f2f63769fb53f475",
            "region": "eu-central-1"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:998461587073:subnet/subnet-0a8176673c31b5a1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8176673c31b5a1e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "998461587073",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "ex20-rds-module-allowed-private-subnet1",
              "access": "private"
            },
            "tags_all": {
              "Name": "ex20-rds-module-allowed-private-subnet1",
              "access": "private"
            },
            "vpc_id": "vpc-067e89283e91feb95"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "998461587073",
            "id": "subnet-0a8176673c31b5a1e",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:998461587073:subnet/subnet-0c7264c7d1b64085a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7264c7d1b64085a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "998461587073",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "ex20-rds-module-allowed-private-subnet2",
              "access": "private"
            },
            "tags_all": {
              "Name": "ex20-rds-module-allowed-private-subnet2",
              "access": "private"
            },
            "vpc_id": "vpc-067e89283e91feb95"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "998461587073",
            "id": "subnet-0c7264c7d1b64085a",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:998461587073:vpc/vpc-067e89283e91feb95",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-077416849fa8e2ae9",
            "default_route_table_id": "rtb-0fa95a8855232ad88",
            "default_security_group_id": "sg-0784825b569819a00",
            "dhcp_options_id": "dopt-0cd29bc8fc646bbe2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-067e89283e91feb95",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fa95a8855232ad88",
            "owner_id": "998461587073",
            "region": "eu-central-1",
            "tags": {
              "Name": "ex20-rds-module-custom-vpc",
              "access": "private"
            },
            "tags_all": {
              "Name": "ex20-rds-module-custom-vpc",
              "access": "private"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "998461587073",
            "id": "vpc-067e89283e91feb95",
            "region": "eu-central-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:998461587073:security-group-rule/sgr-0599ae4778e3a550e",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 5432,
            "id": "sgr-0599ae4778e3a550e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-09daf6a89be19e522",
            "region": "eu-central-1",
            "security_group_id": "sg-054a5136bb5101319",
            "security_group_rule_id": "sgr-0599ae4778e3a550e",
            "tags": null,
            "tags_all": {},
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "998461587073",
            "id": "sgr-0599ae4778e3a550e",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.compliant",
            "aws_security_group.source",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:998461587073:security-group-rule/sgr-0b42400430ce5e375",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0b42400430ce5e375",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-central-1",
            "security_group_id": "sg-01fbb9ad37f6a5e04",
            "security_group_rule_id": "sgr-0b42400430ce5e375",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "998461587073",
            "id": "sgr-0b42400430ce5e375",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.non_compliant",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "data",
      "type": "aws_subnet",
      "name": "input",
      "provider": "module.rds.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-0a8176673c31b5a1e",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:998461587073:subnet/subnet-0a8176673c31b5a1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "available_ip_address_count": 250,
            "cidr_block": "10.0.0.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8176673c31b5a1e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "998461587073",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "state": "available",
            "tags": {
              "Name": "ex20-rds-module-allowed-private-subnet1",
              "access": "private"
            },
            "vpc_id": "vpc-067e89283e91feb95"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet-0c7264c7d1b64085a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:998461587073:subnet/subnet-0c7264c7d1b64085a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7264c7d1b64085a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "998461587073",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "state": "available",
            "tags": {
              "Name": "ex20-rds-module-allowed-private-subnet2",
              "access": "private"
            },
            "vpc_id": "vpc-067e89283e91feb95"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "module.rds.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:998461587073:vpc/vpc-0828fa1e41e050958",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0604c63a29210d4cb",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0cd29bc8fc646bbe2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0828fa1e41e050958",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-099027013f2db5183",
            "owner_id": "998461587073",
            "region": "eu-central-1"
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}